spacing fix

--- a/src/styles/documentation.scss
+++ b/src/styles/documentation.scss
@@ -3,6 +3,8 @@
         width: 70%;
         margin-left: auto;
         margin-right: auto;
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
     }
 
     &__nav {
